Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14401

Open documents list is not restored if you cancel a popup Dialog while exiting Qt Creator

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.6.0-rc1
    • Qt Creator 3.4.0
    • All Other Issues
    • None
    • Windows 8.

    Description

      User case is:
      1. My project is running in the background.
      2. I try to close Qt Creator.
      3. Application Still Running dialog box pops up: do I want to "Force Quit" or "Keep Running" my project?
      4. I select "Keep Running" (in effect: Cancel).
      5. The open document list has unfortunately been cleared and all the windows are empty.

      Note: The same problem occurs with the Close Debugging Session dialog box (Cancel button) if my project was running in debug mode.

      It appears that the open document list is cleared before the dialog box pops up. If you then cancel the Application Still Running (or Close Debugging Session) dialog, Qt Creator stays open, but the original open document list is not restored. You see no documents. This "new" state of affairs is then saved to the session when you close Qt Creator. Oops!

      It's a minor but very annoying problem, especially since I usually didn't notice that the documents were gone until the next time I started Qt Creator! It took a long time to figure out that it was a side effect of cancelling the dialog box rather than perhaps a mysteriously corrupted session file.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-14401
        # Subject Branch Project Status CR V

        Activity

          People

            con Eike Ziller
            momo Linda Gundal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes